k8s/sonarqube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube
  labels:
    project: circleguard
