k8s/sonarqube/sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "jenkins"
          effect: "NoSchedule"
      nodeSelector:
        dedicated: "jenkins"
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarqube
          image: sonarqube:10.4-community
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: data
              mountPath: /opt/sonarqube/data
          readinessProbe:
            httpGet:
              path: /api/system/status
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 20
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sonarqube-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  type: ClusterIP
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
